# backend

./: README.md  concordia.py  concordia_bend.py  main.py  pyproject.toml
db/: mongo.py  redis.py
gpt_language/: gptmodel.py  language_model.py  measurements.py
