[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
typer = "^0.9.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pymongo = {extras = ["srv"], version = "^4.6.1"}
redis = "^5.0.1"
ipython = "^8.21.0"
loguru = "^0.7.2"
black = "^24.2.0"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
eztils = "^0.4.91"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
